# rose

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.codex  Dockerfile.trainer  LICENSE  README.md  alembic.ini  codex.md  docker-compose.cuda.yml  docker-compose.yml  entrypoint.sh  litestream.yml  mise.toml  pyproject.toml  remove_evals.py  start-rs.sh  start.sh  test_runs.py  test_runs_http.py
.github/workflows/: ci.yml
ajv/: Dockerfile
alembic/: env.py
alembic/versions/: 20251223_0235-eb8ca7eaf12d_initial_schema.py  20251226_1236-3dcbfbea1a0d_create_job_events_table.py  20251227_2002-5c3c54831d07_add_import_events_table.py  20251228_1412-8f4a2b19c3c7_add_imported_source_column.py  20260102_1543-aaab3a1ce85f_backfill_lens_root_message_id.py  20260104_1200-9c7f1a2b3c4d_add_messages_tag_column.py
db/: schema.sql
db/migrations/: 20250117_01_aB3Cd-initial-schema.py  20250810000001_create_assistants.sql  20250810000002_create_files.sql  20250810000003_create_threads.sql  20250810000004_create_messages.sql  20250810000005_create_runs_and_run_steps.sql  20250810000006_create_fine_tuning_and_jobs.sql  20250810000007_create_vector_stores.sql  20250810000008_create_message_metadata.sql  20250810000009_create_models.sql  20250812000001_add_file_content_blob.sql  20250812000003_create_litestream_tables.sql  20250815000003_migrate_to_documents_table.sql  20250816000001_create_vector_store_files.sql  20250817000001_make_storage_path_nullable.sql  20250907000001_drop_model_fields.sql  20250907000002_add_model_kind.sql  20250914000001_alter_lora_target_modules.sql  20250914000002_alter_permissions.sql  20250921000001_create_files.sql  20250921000002_create_messages.sql  20250921000003_create_models.sql  20250921000004_create_fine_tuning_jobs.sql  20250921000005_create_fine_tuning_events.sql  20250921000006_create_vector_stores.sql  20250921000007_create_vector_store_files.sql  20250921000008_create_documents.sql  20250923000001_create_files.sql  20250923000002_create_messages.sql  20250923000003_create_models.sql  20250923000004_create_fine_tuning_jobs.sql  20250923000005_create_fine_tuning_events.sql  20250923000006_create_vector_stores.sql  20250923000007_create_vector_store_files.sql  20250923000008_create_documents.sql  20250923000009_add_content_hash_to_documents.sql  20250924000001_create_file_chunks.sql  20250925000001_add_performance_indexes.sql  20250929000001_add_vector_store_file_id_to_documents.sql  20250929000002_drop_file_chunks_table.sql  (+6 more)
docs/: api-reference.md  assistant-workflows.md  available-models.md  configuration.md  development.md  evaluation-scorers.md  fine-tuning-gotchas.md  fine-tuning-workflows.md  model-evaluation.md  openai-compatibility.md  quantization.md  troubleshooting.md  using-the-rose-cli.md
esbuild/: Dockerfile
llama-server/: entrypoint-cuda.sh  entrypoint.sh
migrations/: seed_models.sql
scripts/: README.md  ajv.sh  esbuild.sh  generate_ajv_validators.mjs  generate_query_schema.py  rosary.sh  test_actors.sh  test_logprobs_cli.sh  test_tools.sh  train-dev-commands.sh  train-doc-bot.sh  train-french-responder.sh  train-model-manager-intensive.sh  train-model-manager.sh  train-support-bot.sh
src/rose_cli/: main.py  utils.py
src/rose_cli/actors/: __init__.py  calculator_actor.py  file_reader_actor.py
src/rose_cli/assistants/: __init__.py  create.py  delete.py  get.py  list.py  update.py
src/rose_cli/auth/: __init__.py  generate.py
src/rose_cli/chat/: __init__.py  chat.py  interactive.py
src/rose_cli/commands/: __init__.py  assistants.py  chat.py  cleanup.py  compare.py  complete.py  evals.py  files.py  finetune.py  models.py  responses.py  threads.py  upload.py
src/rose_cli/completions/: __init__.py  completions.py
src/rose_cli/evals/: __init__.py  create.py  list.py  run.py  status.py
src/rose_cli/files/: delete.py  get.py  list.py  upload.py
src/rose_cli/finetune/: __init__.py  cancel.py  create.py  events.py  get.py  list.py  pause.py  quantize.py  resume.py
src/rose_cli/models/: __init__.py  add.py  download.py  get.py  list.py  pull.py  seed.py
src/rose_cli/rerank/: __init__.py  score.py  test.py
src/rose_cli/responses/: __init__.py  create.py  list_chains.py  retrieve.py
src/rose_cli/runs/: __init__.py  create.py  get.py  list.py
src/rose_cli/threads/: __init__.py  add_message.py  create.py  delete.py  get.py  list.py  list_messages.py
src/rose_cli/tools/: __init__.py
src/rose_core/: __init__.py  webhook.py
src/rose_evals/: worker.py
src/rose_finetune/: trainer.py  worker.py
src/rose_ft/: process.py  worker.py
src/rose_inference/: __init__.py  cache.py  generator.py  host.py  inference.py  loader.py  main.py  model_loader.py  runner.py  worker.py
src/rose_inference_rs/: Cargo.toml  pyproject.toml
src/rose_inference_rs/src/: cache.rs  chat_templates.rs  device.rs  dtype_config.rs  error.rs  generate.rs  lib.rs  logprobs.rs  lora.rs  main.rs  models.rs  server.rs  types.rs
src/rose_inference_rs/src/models/: mod.rs  qwen2.rs  qwen3.rs  qwen3_gguf.rs  qwen3_lora.rs
src/rose_server/: app.py  config.py  connect.py  database.py  dependencies.py  fs.py  main.py  model_registry.py  router.py  services.py  settings.py  utils.py  vector.py  worker.py
src/rose_trainer/: __init__.py  client.py  fine_tuner.py  huggingface_trainer.py  process.py  scheduler.py  worker.py
src/rose_utils/: convert_msmarco.py  convert_reranker.py  main.py  quantize.py
src/rose_worker/: client.py  worker.py
tests/: __init__.py  conftest.py  test_assistants.py  test_chat_completions.py  test_example.py  test_factsheets.py  test_file_to_vector_store.py  test_files.py  test_importer.py  test_keyword_extractor.py  test_lenses_revisions.py  test_message_revisions.py  test_messages_lens.py  test_messages_lens_parse.py  test_metrics.py  test_responses_formatter.py  test_runs.py  test_runs_errors.py  test_search_post.py  test_threads.py  test_threads_list_filters.py  test_utils.py  test_vector_stores_chunking.py  test_websocket_inference.py
(+443 files in other folders)
