[project]
name = "rose-server"
version = "0.1.5"
description = "ROSE Server - Run your own LLM server"
requires-python = ">=3.12,<4.0"
authors = [{ name = "Garden Variety AI" }]
license = { text = "MIT" }
keywords = ["llm", "ai", "openai", "inference", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.28.1",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.12",
    "pydantic~=2.11.7",
    "pydantic-settings>=2.7.0",
    "numpy>=2.2.1",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.24",
    "sse-starlette>=2.1.3",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.2",
    "symspellpy>=6.9.0",
    "rake-nltk>=1.0.6",
    "htpy==25.12.0",
    "alembic>=1.17.2",
]

[project.scripts]
rose-server = "rose_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/rose_server"]

[tool.hatch.build.targets.wheel]
packages = ["src/rose_server"]
include = ["src/rose_server/static/**"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
    "mypy>=1.13.0",
    "types-aiofiles>=24.1.0.20250606",
    "types-psutil>=7.0.0.20250601",
    "sqlalchemy[mypy]>=2.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = true
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sse_starlette.*",
]
ignore_errors = true
